update, trying to fix bug for not showing page in githubpages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,12 +201,7 @@ header {
         }
 }
 
-@media (min-width: 700px) {
-    .card-img-top,
-    .recipes-container .card-img-top {
-        height: 40vh;
-    }
-}
+
 
 
 @media (min-width: 992px) {
